--- a/cisco/index.html
+++ b/cisco/index.html
@@ -16,15 +16,7 @@
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 </head>
 <body>
-<script src="../js/md5.js"></script>
-<script>
-	var password; 
-    var thePassword="fa8eca2cac8fea6f15afb977bff2ffa3"; 
-    password=prompt('Enter Password',''); 
-    if (md5(password)==thePassword) {  }
-    else { alert('Incorrect Password! Click OK to Enter!');
-		window.location="http://erchsm.me"; } 
-</script>
+<script type="javascript" src="https://raw.githubusercontent.com/erchsm/me/gh-pages/js/md5.js"></script>
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
 
@@ -45,7 +37,7 @@
 								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href=".">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
-								<li><a href="https://github.com/erchsm/box-app">Box</a></li>
+								<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
 								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
 								<li><a href="#">Contact</a></li>							</ul>
 							</div>
@@ -64,14 +56,14 @@
 	<div class="inner">
 		
 		<div class="row">
-			<div class="6u 12u(medium)">
+			<div class="7u 12u(medium)">
 				<span class="image fit"><img src="images/mate-ui.png" alt=""/></span>
 			</div>
-			<div class="6u$ 12u$(medium)">
+			<div class="5u$ 12u$(medium)">
 				<h4>UI Engineer</h4>
 				<p>In my second role at Cisco I worked as a UI Engineer. The project I worked on was a web application that utilized HTML, CSS and Javascript to allow our users to visualize their WAN(Wide Area Network). More specifically our application utilized  javascript libraries/frameworks including NodeJS, BackboneJS & HighchartsJS. 
 				</p>
-				<p>Unfortunately, my work on this team is covered under an NDA and I am not allowed to disclose any further details on my personal site. I can however, show my contributions to the project in a in-person demo. Please contact me for more details regarding the project or to schedule a time to see it live!</p>
+
 			</div>
 		</div>
 	</div>
