--- a/perforce/index.html
+++ b/perforce/index.html
@@ -37,7 +37,7 @@
 								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
-								<li><a href="https://github.com/erchsm/box-app">Box</a></li>
+								<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
 								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
 								<li><a href="#">Contact</a></li>							</ul>
 							</div>
@@ -49,37 +49,50 @@
 			<!-- Main -->
 			<article id="main">
 				<header class="style8">
-					<h2>Helix Sync<span class="x">&times;</span>Perforce</h2>
+					<h2>Helix Suite<span class="x">&times;</span>Perforce</h2>
 <!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 -->					</header>
 <section class="wrapper style5">
 	<div class="inner">
 		
 		<div class="row">
-			<div class="6u 12u$(medium)">
+			<div class="5u 12u$(medium)">
 				<h3>Helix Sync</h3>
-				<p>I'm currently working at <a href="https://perforce.com">Perforce</a> as a UX Designer! Me and the UX team are working on a project called Helix Sync. The product is in its early stages and I'm creating a concept prototype to test with our existing customers. I'm creating it with this awesome prototyping tool called <a href="https://proto.io">Proto.io</a> & hopefully I'll be able to publish a link here soon!
+				<p>I'm currently working at <a href="https://perforce.com">Perforce</a> as a UX Designer! My employment was structured in such a way that design & research were conducted in 1-month product rotations. 
 				</p>
-				<p>In the meantime I've been creating little logos & headlines with Sketch. Enjoy!</p>
-			</div>
-			<div class="6u 12u$(medium)">
-				<span class="image fit"><img src="images/HELIX  INVERSE.png" alt=""/></span>
-				<span class="image fit"><img src="images/HELIX .png" alt=""/></span>
-				<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
-			</div>
-		</div>
-		<div class="row">
-			<div class="6u 12u$(medium)">
-				<h3>Helix Cloud</h3>
-				<p>Some icon design I did for their Helix Cloud product. Made with Illustrator. Enjoy!</p>
-			</div>
-			<div class="6u 12u$(medium)">
-				<span class="image fit"><img src="images/P4 HEX.png" alt=""/></span>
-				<span class="image fit"><img src="images/P4.png" alt=""/></span>
-			</div>
-		</div>
+				<p>My first project involved are working on one of an early stage product called Helix Sync. My first task was to create a concept prototype to test with our existing customers. 
+				</p>
+				<h3>Goals of THE Test</h3><ol>
+					<li>Learn about people's workflows.</li> 
 
+					<li>Get the test subject to understand the product.</li> 
+
+					<li>See if the product aligns with their real life workflows.</li>	
+				</ol>	
+			</p>
+			<ul class="actions vertical">
+				<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
+			</ul>
+			<p>In the meantime I've been creating little logos & headlines with Sketch. Enjoy!</p>
+		</div>
+		<div class="7u 12u$(medium)">
+			<span class="image fit"><img src="images/HELIX  INVERSE.png" alt=""/></span>
+			<span class="image fit"><img src="images/HELIX .png" alt=""/></span>
+			<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
+		</div>
 	</div>
+	<div class="row">
+		<div class="6u 12u$(medium)">
+			<h3>Helix Cloud</h3>
+			<p>Some icon design I did for their Helix Cloud product. Made with Illustrator. Enjoy!</p>
+		</div>
+		<div class="6u 12u$(medium)">
+			<span class="image fit"><img src="images/P4 HEX.png" alt=""/></span>
+			<span class="image fit"><img src="images/P4.png" alt=""/></span>
+		</div>
+	</div>
+
+</div>
 </section>
 <!-- <header class="style3">
 	<h2>User Flow<span class="x">&times;</span>Sketches</h2>
