--- a/scholastic/index.html
+++ b/scholastic/index.html
@@ -40,7 +40,7 @@
 								<li><a href=".">Scholastic</a></li>
 								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
-								<li><a href="https://github.com/erchsm/box-app">Box</a></li>
+								<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
 								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
 								<li><a href="#">Contact</a></li>
 							</ul>
@@ -67,7 +67,7 @@
 							<p>We ended up creating an online system to help encourage children to read outside of school. Our system included quizzes to help children discover books curated to their liking, a new bookshelf for children to track the books they have read and way for kids to request books from their parents.</p>
 							<!-- </header> -->
 							<ul class="actions vertical">
-								<li><a href="https://projects.invisionapp.com/share/AT2TBFZ4W#/screens" class="button ">Our prototyped solution!</a></li>
+								<li><a href="https://projects.invisionapp.com/share/AT2TBFZ4W#/screens" class="button ">Our prototyped solution</a></li>
 							</ul>
 						</div>               
 						<div class="6u$ 12u$(medium)">
@@ -159,30 +159,31 @@
 						<li><b>10 Word Book Review</b> - This would allow the ability for children to express how they feel about a book they read.</li> 
 
 						<li><b>Badge System</b> - This would create a way for a child to keep track of their accomplishments by receiving badges for completing and reviewing books.
-						</li>		
-					</section>
-				</div>
-				<section id="cta" class="wrapper style5">
-					<div class="inner">
-						<header>
-							<h2>Low Fidelity Prototype</h2>
-							<p>Our low fidelity prototype in Invision</p>
-						</header>
-						<ul class="actions vertical">
-							<li><a href="https://projects.invisionapp.com/share/AT2TBFZ4W#/screens" class="button fit">Go!</a></li>
-						</ul>
-					</div>
+						</li>	
+					</ol>	
 				</section>
-			</article>
+			</div>
+			<section id="cta" class="wrapper style5">
+				<div class="inner">
+					<header>
+						<h2>Low Fidelity Prototype</h2>
+						<p>Our low fidelity prototype in Invision</p>
+					</header>
+					<ul class="actions vertical">
+						<li><a href="https://projects.invisionapp.com/share/AT2TBFZ4W#/screens" class="button fit">Go!</a></li>
+					</ul>
+				</div>
+			</section>
+		</article>
 
-			<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
-					<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
-					<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
-				</ul>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="https://linkedin.com/in/erchsm" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+				<li><a href="https://www.flickr.com/photos/erchsm/" class="icon fa-flickr"><span class="label">Flickr</span></a></li>
+				<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
+			</ul>
 						<!-- <ul class="copyright">
 							<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
 						</ul>
