--- a/cisco/index.html
+++ b/cisco/index.html
@@ -16,7 +16,7 @@
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 </head>
 <body>
-<script type="javascript" src="https://raw.githubusercontent.com/erchsm/me/gh-pages/js/md5.js"></script>
+	<script type="text/javascript" src="../js/md5.js"></script>
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
 
@@ -39,31 +39,39 @@
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
 								<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
 								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
-								<li><a href="#">Contact</a></li>							</ul>
-							</div>
-						</li>
-					</ul>
-				</nav>
-			</header>
+								<li><a href="#">Contact</a></li>
+							</ul>
+						</div>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-			<!-- Main -->
-			<article id="main">
-				<header class="style7">
-					<h2>Cisco</h2>
+		<!-- Main -->
+		<article id="main">
+			<header class="style7">
+				<h2>Cisco</h2>
 <!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 -->					</header>
 <section class="wrapper style5">
 	<div class="inner">
 		
 		<div class="row">
-			<div class="7u 12u(medium)">
-				<span class="image fit"><img src="images/mate-ui.png" alt=""/></span>
-			</div>
-			<div class="5u$ 12u$(medium)">
+			<div class="6u 12u(medium)">
 				<h4>UI Engineer</h4>
 				<p>In my second role at Cisco I worked as a UI Engineer. The project I worked on was a web application that utilized HTML, CSS and Javascript to allow our users to visualize their WAN(Wide Area Network). More specifically our application utilized  javascript libraries/frameworks including NodeJS, BackboneJS & HighchartsJS. 
 				</p>
+			</div>
+			<div class="6u$ 12u$(medium)">
+				<span class="image fit"><img src="images/mate-ui.png" alt=""/></span>
+			</div>
+			<span class="image fit"><img src="images/development.png" alt=""/></span>
+			<div class="6u 12u(medium)">
+				<span class="image fit"><img src="images/dropdown.png" alt=""/></span>
 
+			</div>
+			<div class="3u$ 12u$(medium)">
+				<span class="image fit"><img src="images/tooltip.png" alt=""/></span>
 			</div>
 		</div>
 	</div>
