--- a/cisco/index.html
+++ b/cisco/index.html
@@ -33,7 +33,7 @@
 								<li><a href="../">Home</a></li>
 								<li><a href="../perforce/">Perforce</a></li>
 								<li><a href="../givjoy/">GivJoy</a></li>
-								<li><a href="../content-mutual/">CM</a></li>
+								<li><a href="../content-mutual/">Content Mutual</a></li>
 								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href=".">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
@@ -50,12 +50,20 @@
 		<!-- Main -->
 		<article id="main">
 			<header class="style7">
-				<h2>Cisco</h2>
+				<h2>Cisco<span class="x">&times;</span>WAE</h2>
 <!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 -->					</header>
 <section class="wrapper style5">
 	<div class="inner">
-		
+		<div class="row">
+			<div class="6u 12u(medium)">
+				<h4>WAE API Specialist</h4>
+
+				<ul class="actions vertical">
+					<li><a href="https://developer.cisco.com/site/wae/tools/soap-ui-scripts/#using-soapui-with-wae-a-tutorial" class="button ">Our SoapUI API User Guide</a></li>
+				</ul>
+			</div>
+		</div>
 		<div class="row">
 			<div class="6u 12u(medium)">
 				<h4>UI Engineer</h4>
