--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<section class="spotlight">
 			<div class="image"><img src="perforce/images/case-study-image.png" alt="" /></div><div class="content">
 			<h2>Interaction Design:
-				Helix Sync</h2>
+				Helix Suite</h2>
 				<p>Helix Sync is a project I'm working on at Perforce. The goal of this desktop application is to create a version control tool for the less technical user.</p>
 				<!-- My goals for this project we're to increase accessibility -->
 				<ul class="actions">
