--- a/scholastic/index.html
+++ b/scholastic/index.html
@@ -36,7 +36,7 @@
 								<li><a href="../">Home</a></li>
 								<li><a href="../perforce/">Perforce</a></li>
 								<li><a href="../givjoy/">GivJoy</a></li>
-								<li><a href="../content-mutual/">CM</a></li>
+								<li><a href="../content-mutual/">Content Mutual</a></li>
 								<li><a href=".">Scholastic</a></li>
 								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
