--- a/content-mutual/index.html
+++ b/content-mutual/index.html
@@ -33,13 +33,13 @@
 								<li><a href="../">Home</a></li>
 								<li><a href="../perforce/">Perforce</a></li>
 								<li><a href="../givjoy/">GivJoy</a></li>
-								<li><a href=".">CM</a></li>
+								<li><a href=".">Content Mutual</a></li>
 								<li><a href="../scholastic/">Scholastic</a></li>
 								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
 								<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
 								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
-								<li><a href="#">Contact</a></li>							</ul>
+								<li><a href="#">Contact</a></li>						</ul>
 							</div>
 						</li>
 					</ul>
