--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 						<div id="menu">
 							<ul>
 								<li><a href=".">Home</a></li>
-								<li><a href="perforce/">Perforce</a></li>
-								<li><a href="givjoy/">GivJoy</a></li>
-								<li><a href="content-mutual/">CM</a></li>
-								<li><a href="scholastic/">Scholastic</a></li>
-								<li><a href="cisco/">Cisco</a></li>
+								<li><a href="../perforce/">Perforce</a></li>
+								<li><a href="../givjoy/">GivJoy</a></li>
+								<li><a href="../content-mutual/">Content Mutual</a></li>
+								<li><a href="../scholastic/">Scholastic</a></li>
+								<li><a href="../cisco/">Cisco</a></li>
 								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
 								<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
 								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
