added cisco stuff

--- a/cisco/index.html
+++ b/cisco/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<script type="text/javascript" src="../js/md5.js"></script>
-	<!-- Page Wrapper -->
+	<!-- Page Wrapper
 	<div id="page-wrapper">
 
 		<!-- Header -->
@@ -57,17 +57,41 @@
 	<div class="inner">
 		<div class="row">
 			<div class="6u 12u(medium)">
-				<h4>WAE API Specialist</h4>
-
+				<h4>WAE API Engineer</h4>
+				<p>
+					In my first position at Cisco I worked on creating and documenting REST API's in the Wide Area Network (WAN) Orchestration product group.
+					The WAN Automation Engine (WAE) is a set of web API's designed to provide bandwidth orchestration capability for a Wide Area Network in the Service Provider environment. 
+				</p>
+				
 				<ul class="actions vertical">
+					<li><a href="https://developer.cisco.com/site/wae/documentation/tutorial/#wan-automation-engine-wae-tutorial" class="button ">A WAE Tutorial</a></li>
 					<li><a href="https://developer.cisco.com/site/wae/tools/soap-ui-scripts/#using-soapui-with-wae-a-tutorial" class="button ">Our SoapUI API User Guide</a></li>
 				</ul>
+			</div>
+			<div class="6u 12u(medium)">
+				<p>
+					Our API's were designed for use by a developer working in an organization that provides network services. Much of my job was figuring out the best way to deliver these API's to them and make them <strong>as easy to use as possible</strong>. 
+				</p>
+				<p>
+					I approached designing the best experience for these developers by:
+				</p>
+				<ol>
+					<li>Integrating an API documentation plug-in into our build.</li> 
+
+					<li>Analyzing the tools that developers use for manipulating</li> 
+
+					<li>See if the product aligns with their real life workflows.</li>	
+				</ol>	
 			</div>
 		</div>
 		<div class="row">
 			<div class="6u 12u(medium)">
 				<h4>UI Engineer</h4>
-				<p>In my second role at Cisco I worked as a UI Engineer. The project I worked on was a web application that utilized HTML, CSS and Javascript to allow our users to visualize their WAN(Wide Area Network). More specifically our application utilized  javascript libraries/frameworks including NodeJS, BackboneJS & HighchartsJS. 
+				<p>
+					In my second role at Cisco I worked as a UI Engineer. The project I worked on was a visualization tool thata web application that utilized HTML, CSS and Javascript to allow our users to visualize their WAN(Wide Area Network). 
+				</p>
+				<p>
+					More specifically our application utilized  javascript libraries/frameworks including NodeJS, BackboneJS & HighchartsJS. 
 				</p>
 			</div>
 			<div class="6u$ 12u$(medium)">
@@ -84,20 +108,7 @@
 		</div>
 	</div>
 </section>
-<!-- <header class="style3">
-	<h2>User Flow<span class="x">&times;</span>Sketches</h2>
-</header> -->
-<!-- <section id="cta" class="wrapper style5">
-	<div class="inner">
-		<header>
-			<h2>Low Fidelity Prototype</h2>
-			<p>Our low fidelity prototype in Invision</p>
-		</header>
-		<ul class="actions vertical">
-			<li><a href="#" class="button fit">Go!</a></li>
-		</ul>
-	</div>
-</section> -->
+
 </article>
 
 <!-- Footer -->
@@ -108,10 +119,7 @@
 		<li><a href="https://instagram.com/erchsm/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 		<li><a href="https://github.com/erchsm" class="icon fa-github"><span class="label">Github</span></a></li>
 	</ul>
-	<!-- <ul class="copyright">
-		<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
-	</ul>
---></footer>
+</footer>
 
 </div>
 
