--- a/scholastic/index.html
+++ b/scholastic/index.html
@@ -82,23 +82,43 @@
 
 
 
-					<h2>RESEARCH</h2>
-					<p>A closer look at Scholastic's website...</p>
-					<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d42e3e4b0803a46dd012f/1430078193911/Screen+Shot+2015-04-26+at+12.55.59+PM.png?format=1000w" alt="" /></span>
+					<h3>RESEARCH</h3>
+					<div class="row">
+						<div class="5u 12u(medium)">
+							<p>A closer look at Scholastic's website...</p>
+							<p>There is a children's section called "The Stacks" that has lots of quizzes and games that do not encourage children to read.</p> 
+						</div>
+						<div class="7u$ 12u$(medium)">
+							<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d42e3e4b0803a46dd012f/1430078193911/Screen+Shot+2015-04-26+at+12.55.59+PM.png?format=1000w" alt="" /></span>
+						</div>
+					</div>
 
 
 
-					<p>There is a children's section called "The Stacks" that has lots of quizzes and games that do not encourage children to read.</p> 
 
-					<h2>SURVEY</h2>
 
+
+					<h3>SURVEY</h3>
 
 					<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d47c4e4b0e618515fd9b1/1430079431646/survey_chart.jpg?format=1000w" alt="" /></span>	
 
-					<p>What media are kids using to read? From our results, it is clear that children read mostly paper books rather than digital.</p> 				
+					
+
+					<div class="row">
+						<div class="7u 12u(medium)">
+
+						</div>
+						<div class="5u$ 12u$(medium)">
+							<p>What media are kids using to read? From our results, it is clear that children read mostly paper books rather than digital.</p>
+							<!-- <span class="image fit"><img src="images/Eric/Survey.png" alt="" /></span>	 -->
+						</div>
+					</div>
+
+
+
 					<div class="row">
 						<div class="6u 12u(medium)">
-							<h2>INTERVIEWS</h2>
+							<h3>INTERVIEWS</h3>
 
 							<p>From our interviews, we discovered that role models are not important. Several of the interviewees had no idea who their role models were.</p>
 
@@ -107,7 +127,7 @@
 							<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d6283e4b0ed6ca354dc5b/1430086277147/?format=500w" alt="" /></span>
 						</div>
 					</div>
-					<h2>CONTEXTUAL INQUIRY</h2>
+					<h3>CONTEXTUAL INQUIRY</h3>
 					<p> Parents let their children wander the aisles to look for their own books. Children did not get any help from the parents because it's much more fun for the kids to be able to have a say in what they want to read. </p>
 					<div class="row">
 						<div class="6u 12u$(medium)">
@@ -119,23 +139,23 @@
 						</div>
 					</div>
 
-					<h2>NEW HYPOTHESIS</h2>
+					<h3>NEW HYPOTHESIS</h3>
 
 					<p>Children would be more encouraged to read outside of school if there was a way to take advantage of digital technology to make choosing books fun and exciting.</p>
-					<h2>PERSONA DEVELOPMENT</h2>
+					<h3>PERSONA DEVELOPMENT</h3>
 
-					From our research, were were able to start developing personas. We managed to narrow it down to one primary persona. Meet Lanie! 
+					<p>From our research, were were able to start developing personas. We managed to narrow it down to one primary persona. Meet Lanie!<p> 
 
-					<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d58eae4b0786b41e04491/1430083828782/lanie.png?format=1000w" alt="" /></span>
-					<h2>USER FLOW</h2>
+						<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d58eae4b0786b41e04491/1430083828782/lanie.png?format=1000w" alt="" /></span>
+						<h2>USER FLOW</h2>
 
-					<p>Keeping our primary persona Lanie in mind, we were able to develop a user flow based off of "The Stacks" website. This is our second iteration that was created in Omnigraffle.</p>  
+						<p>Keeping our primary persona Lanie in mind, we were able to develop a user flow based off of "The Stacks" website. This is our second iteration that was created in Omnigraffle.</p>  
 
-					<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553db053e4b0bd2bbd40f920/1430106197269/?format=1000w" alt="" /></span>
-					<h2>SKETCHES</h2>
+						<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553db053e4b0bd2bbd40f920/1430106197269/?format=1000w" alt="" /></span>
+						<h2>SKETCHES</h2>
 
-					Initial sketches of possible interfaces before digitization. 
-					<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d6678e4b0ee62c7bcaf2d/1430087317595/?format=1000w" alt="" /></span>
+						Initial sketches of possible interfaces before digitization. 
+						<span class="image fit"><img src="http://static1.squarespace.com/static/537a754de4b0297decd9ef74/t/553d6678e4b0ee62c7bcaf2d/1430087317595/?format=1000w" alt="" /></span>
 				<!-- 	<h2>DESIGN ITERATIONS</h2>
 
 				<p>Several sketches later, we were able to start digitizing.</p> -->
