perforce & cisco case study work

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 	<section id="two" class="wrapper style5">
 		<section class="spotlight">
 			<div class="image"><img src="perforce/images/case-study-image.png" alt="" /></div><div class="content">
-			<h2>Interaction Design:
+			<h2>Product Design:
 				Helix Suite</h2>
-				<p>Helix Sync is a project I'm working on at Perforce. The goal of this desktop application is to create a version control tool for the less technical user.</p>
+				<p>The Helix product suite is a collection of projects that I worked on at Perforce. The goal of these projects was to create version control tools for the less technical user.</p>
 				<!-- My goals for this project we're to increase accessibility -->
 				<ul class="actions">
 					<li><a href="perforce/" class="button fit">Learn More</a></li>
