--- a/cisco/index.html
+++ b/cisco/index.html
@@ -16,7 +16,6 @@
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 </head>
 <body>
-	<script type="text/javascript" src="../js/md5.js"></script>
 	<!-- Page Wrapper
 	<div id="page-wrapper">
 
@@ -56,13 +55,17 @@
 <section class="wrapper style5">
 	<div class="inner">
 		<div class="row">
-			<div class="6u 12u(medium)">
+			<div class="12u 12u$(medium)">
 				<h4>WAE API Engineer</h4>
+			</div>
+		</div>
+		<div class="row">
+			<div class="6u 12u(medium)">
 				<p>
 					In my first position at Cisco I worked on creating and documenting REST API's in the Wide Area Network (WAN) Orchestration product group.
 					The WAN Automation Engine (WAE) is a set of web API's designed to provide bandwidth orchestration capability for a Wide Area Network in the Service Provider environment. 
 				</p>
-				
+
 				<ul class="actions vertical">
 					<li><a href="https://developer.cisco.com/site/wae/documentation/tutorial/#wan-automation-engine-wae-tutorial" class="button ">A WAE Tutorial</a></li>
 					<li><a href="https://developer.cisco.com/site/wae/tools/soap-ui-scripts/#using-soapui-with-wae-a-tutorial" class="button ">Our SoapUI API User Guide</a></li>
@@ -78,7 +81,7 @@
 				<ol>
 					<li>Integrating an API documentation plug-in into our build.</li> 
 
-					<li>Analyzing the tools that developers use for manipulating</li> 
+					<li>Analyzing the tools that developers use for using and developing API's.</li> 
 
 					<li>See if the product aligns with their real life workflows.</li>	
 				</ol>	
