--- a/cisco/index.html
+++ b/cisco/index.html
@@ -14,12 +14,12 @@
 	<link rel="stylesheet" href="../css/style.css" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-</head>
-<body>
-	<!-- Page Wrapper
-	<div id="page-wrapper">
 
-		<!-- Header -->
+	</head>
+
+	<body>
+	<script src="../js/md5.js" type="text/javascript"></script>
+
 		<header id="header" >
 			<h1><a href="index.html"></a></h1>
 
@@ -132,6 +132,7 @@
 <script src="../js/jquery.scrolly.min.js"></script>
 <script src="../js/skel.min.js"></script>
 <script src="../js/init.js"></script>
+
 
 </body>
 </html>
