--- a/perforce/index.html
+++ b/perforce/index.html
@@ -62,35 +62,44 @@
 				</p>
 				<p>My first project involved are working on one of an early stage product called Helix Sync. My first task was to create a concept prototype to test with our existing customers. 
 				</p>
+				
+			</div>
+			<div class="7u 12u$(medium)">
+				<span class="image fit"><img src="images/bg1.png" alt=""/></span>
 				<h3>Goals of THE Test</h3><ol>
-					<li>Learn about people's workflows.</li> 
+				<li>Learn about people's workflows.</li> 
 
-					<li>Get the test subject to understand the product.</li> 
+				<li>Get the test subject to understand the product.</li> 
 
-					<li>See if the product aligns with their real life workflows.</li>	
-				</ol>	
-			</p>
-			<ul class="actions vertical">
-				<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
-			</ul>
-			<p>In the meantime I've been creating little logos & headlines with Sketch. Enjoy!</p>
-		</div>
-		<div class="7u 12u$(medium)">
-			<span class="image fit"><img src="images/HELIX  INVERSE.png" alt=""/></span>
-			<span class="image fit"><img src="images/HELIX .png" alt=""/></span>
-			<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
-		</div>
+				<li>See if the product aligns with their real life workflows.</li>	
+			</ol>	
+		</p>
+		<ul class="actions vertical">
+			<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
+		</ul>
+		<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
 	</div>
-	<div class="row">
-		<div class="6u 12u$(medium)">
-			<h3>Helix Cloud</h3>
-			<p>Some icon design I did for their Helix Cloud product. Made with Illustrator. Enjoy!</p>
-		</div>
-		<div class="6u 12u$(medium)">
-			<span class="image fit"><img src="images/P4 HEX.png" alt=""/></span>
-			<span class="image fit"><img src="images/P4.png" alt=""/></span>
-		</div>
+</div>
+<div class="row">
+	<div class="6u 12u$(medium)">
+		<h3>Helix Cloud</h3>
+		<p>Some icon design I did for their Helix Cloud product. Made with Illustrator. Enjoy!</p>
 	</div>
+	<div class="6u 12u$(medium)">
+		<span class="image fit"><img src="images/P4 HEX.png" alt=""/></span>
+		<span class="image fit"><img src="images/P4.png" alt=""/></span>
+	</div>
+</div>
+<div class="row">
+	<div class="6u 12u$(medium)">
+		<h3>Miscellaneous</h3>
+		<p>In my downtime I've been trying to practice visual design. I did so by creating re-imagined little logos for the Helix Suite products with Sketch. Enjoy!</p>
+	</div>
+	<div class="6u 12u$(medium)">
+		<span class="image fit"><img src="images/HELIX  INVERSE.png" alt=""/></span>
+		<span class="image fit"><img src="images/HELIX .png" alt=""/></span>
+	</div>
+</div>
 
 </div>
 </section>
