resume changes, perforce work

--- a/perforce/index.html
+++ b/perforce/index.html
@@ -57,32 +57,52 @@
 		
 		<div class="row">
 			<div class="5u 12u$(medium)">
-				<h3>Helix Sync</h3>
+				<h4>Helix Sync</h4>
 				<p>I'm currently working at <a href="https://perforce.com">Perforce</a> as a UX Designer! My employment was structured in such a way that design & research were conducted in 1-month product rotations. 
 				</p>
-				<p>My first project involved are working on one of an early stage product called Helix Sync. My first task was to create a concept prototype to test with our existing customers. 
+				<p>My first project involved working on one of an early stage product called Helix Sync. My first task was to create a concept prototype for the product to illicit early feedback from our users. Using the prototype, a test script and task analysis we were hoping to get some early insight on the direction of our product.
 				</p>
-				
-			</div>
-			<div class="7u 12u$(medium)">
-				<span class="image fit"><img src="images/bg1.png" alt=""/></span>
-				<h3>Goals of THE Test</h3><ol>
-				<li>Learn about people's workflows.</li> 
+				<h4>TEST SETUP</h4>
+				The test itself consisted of:
+				<ol>
+					<li><b>Task Analysis with Prototype.</b> An identical task w/ both Manual/Auto modes.</li> 
+					<li><b>Pre Task Analysis Quantitative Interview.</b> Collect hard numbers and demographics.</li> 
+					<li><b>Post Task Analysis Qualatative Interview.</b> How did “X” make you feel?</li>	
+				</ol>
+				The decided goals for this particular study included:
+				<ol>
+					<b>
+						<li>Learn about people's workflows.</li> 
 
-				<li>Get the test subject to understand the product.</li> 
+						<li>Get the test subject to understand the product.</li> 
 
-				<li>See if the product aligns with their real life workflows.</li>	
-			</ol>	
+						<li>See if the product aligns with their real life workflows.</li>	
+					</b>
+				</ol>	
+				We had a total of 10 total test participants. 
+				4 of them we're internal Perforce customers. 6 of them wer're external participants.
+			</br>
+
 		</p>
+
 		<ul class="actions vertical">
 			<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
 		</ul>
+
+	</div>
+	<div class="7u 12u$(medium)">
+		<span class="image fit"><img src="images/bg1.png" alt=""/></span>
+
+		<h4>OUR SYNTHESIS</h4>
+		<p>To help evangelize design through Perforce myself and another designer fascilitated group synthesis sessions where we invited engineers & stakeholders to participate in "hands-on" synthesis</p>
+		<p>Techniques we used during these sessions included Affinity Mapping</p>
+		<span class="image fit"><img src="images/synthesis.png" alt=""/></span>
 		<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
 	</div>
 </div>
 <div class="row">
 	<div class="6u 12u$(medium)">
-		<h3>Helix Cloud</h3>
+		<h4>Helix Cloud</h4>
 		<p>Some icon design I did for their Helix Cloud product. Made with Illustrator. Enjoy!</p>
 	</div>
 	<div class="6u 12u$(medium)">
@@ -92,7 +112,7 @@
 </div>
 <div class="row">
 	<div class="6u 12u$(medium)">
-		<h3>Miscellaneous</h3>
+		<b>Miscellaneous</b>
 		<p>In my downtime I've been trying to practice visual design. I did so by creating re-imagined little logos for the Helix Suite products with Sketch. Enjoy!</p>
 	</div>
 	<div class="6u 12u$(medium)">
