--- a/cisco/index.html
+++ b/cisco/index.html
@@ -15,41 +15,41 @@
 	<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 
-	</head>
+</head>
 
-	<body>
+<body>
 	<script src="../js/md5.js" type="text/javascript"></script>
 
-		<header id="header" >
-			<h1><a href="index.html"></a></h1>
+	<header id="header" >
+		<h1><a href="index.html"></a></h1>
 
-			<nav id="nav">
-				<ul>
-					<li class="special">
-						<a href="#" class="menuToggle"><span></span></a>
-						<div id="menu">
-							<ul>
-								<li><a href="../">Home</a></li>
-								<li><a href="../perforce/">Perforce</a></li>
-								<li><a href="../givjoy/">GivJoy</a></li>
-								<li><a href="../content-mutual/">Content Mutual</a></li>
-								<li><a href="../scholastic/">Scholastic</a></li>
-								<li><a href=".">Cisco</a></li>
-								<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
-								<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
-								<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
-								<li><a href="#">Contact</a></li>
-							</ul>
-						</div>
-					</li>
-				</ul>
-			</nav>
-		</header>
+		<nav id="nav">
+			<ul>
+				<li class="special">
+					<a href="#" class="menuToggle"><span></span></a>
+					<div id="menu">
+						<ul>
+							<li><a href="../">Home</a></li>
+							<li><a href="../perforce/">Perforce</a></li>
+							<li><a href="../givjoy/">GivJoy</a></li>
+							<li><a href="../content-mutual/">Content Mutual</a></li>
+							<li><a href="../scholastic/">Scholastic</a></li>
+							<li><a href=".">Cisco</a></li>
+							<li><a href="https://github.com/erchsm/M-E">M&E</a></li>
+							<li><a href="https://github.com/erchsm/box-app/blob/gh-pages/README.md">Box</a></li>
+							<li><a href="http://erchsm.github.io/me/resume/ericsmith-resume.pdf">Resume</a></li>
+							<li><a href="#">Contact</a></li>
+						</ul>
+					</div>
+				</li>
+			</ul>
+		</nav>
+	</header>
 
-		<!-- Main -->
-		<article id="main">
-			<header class="style7">
-				<h2>Cisco<span class="x">&times;</span>WAE</h2>
+	<!-- Main -->
+	<article id="main">
+		<header class="style7">
+			<h2>Cisco<span class="x">&times;</span>WAE</h2>
 <!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 -->					</header>
 <section class="wrapper style5">
@@ -69,7 +69,10 @@
 				<ul class="actions vertical">
 					<li><a href="https://developer.cisco.com/site/wae/documentation/tutorial/#wan-automation-engine-wae-tutorial" class="button ">A WAE Tutorial</a></li>
 					<li><a href="https://developer.cisco.com/site/wae/tools/soap-ui-scripts/#using-soapui-with-wae-a-tutorial" class="button ">Our SoapUI API User Guide</a></li>
+					<li><a href="https://developer.cisco.com/fileMedia/download/26c5b701-3a2e-4174-b53f-501a45518d59" class="button ">Postman Sample JSON</a></li>
+					<li><a href="https://developer.cisco.com/fileMedia/download/6622761e-ffdf-4fdf-90b2-bf8a25563b13" class="button ">SOAPUI Scripts</a></li>
 				</ul>
+
 			</div>
 			<div class="6u 12u(medium)">
 				<p>
@@ -79,11 +82,11 @@
 					I approached designing the best experience for these developers by:
 				</p>
 				<ol>
-					<li>Integrating an API documentation plug-in into our build.</li> 
+					<li><b>Integrating an API documentation plug-in into our build.</b> This allowed for more streamlined documentation to be delivered to our developers.</li> 
 
-					<li>Analyzing the tools that developers use for using and developing API's.</li> 
+					<li><b>Analyzing the tools that developers use for using and developing API's.</b> In this process I discovered SOAPUI and Postman to be commonly used tools.</li> 
 
-					<li>See if the product aligns with their real life workflows.</li>	
+					<li><b>Generating lots of JSON examples and use cases.</b> This included creating scripts using SOAPUI to completely build out these use cases.</li>	
 				</ol>	
 			</div>
 		</div>
@@ -91,10 +94,10 @@
 			<div class="6u 12u(medium)">
 				<h4>UI Engineer</h4>
 				<p>
-					In my second role at Cisco I worked as a UI Engineer. The project I worked on was a visualization tool thata web application that utilized HTML, CSS and Javascript to allow our users to visualize their WAN(Wide Area Network). 
+					In my second role at Cisco I worked as a UI Engineer. The project I worked on was a visualization tool for the WAE web API's that I helped to create in  my previous position. This role involved utilized HTML, CSS and Javascript–more specifically javascript libraries/frameworks including NodeJS, BackboneJS & HighchartsJS. 
 				</p>
 				<p>
-					More specifically our application utilized  javascript libraries/frameworks including NodeJS, BackboneJS & HighchartsJS. 
+					In this role I continued to try to give the best experience to these developers that would be using the application. I put a lot of energy in particular into working on this configuration page that you see below.
 				</p>
 			</div>
 			<div class="6u$ 12u$(medium)">
@@ -108,6 +111,16 @@
 			<div class="3u$ 12u$(medium)">
 				<span class="image fit"><img src="images/tooltip.png" alt=""/></span>
 			</div>
+			<p>
+				Me and my team were finding that <b>developers that did not have a complete knowledge of our ecosystem had a hard time setting up our application.</b> As someone who had worked on the much of the documentation and creation of the API's I empathized with these developers and strived to make that information as visible as possible in the application. I did so by:
+			</p>
+
+			<ol>
+				<li><b>Creating a comprehensive "Help" section of the site.</b></li> 
+
+				<li><b>Creating tooltip UI's for assisting users in the interface itself.</li> 
+			</ol>	
+
 		</div>
 	</div>
 </section>
