--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<section class="spotlight">
 			<div class="image"><img src="perforce/images/case-study-image.png" alt="" /></div><div class="content">
 			<h2>Product Design:
-				Helix Suite</h2>
+				Helix Sync</h2>
 				<p>The Helix product suite is a collection of projects that I worked on at Perforce. The goal of these projects was to create version control tools for the less technical user.</p>
 				<!-- My goals for this project we're to increase accessibility -->
 				<ul class="actions">
