--- a/perforce/index.html
+++ b/perforce/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 
+	<script src="../js/md5.js" type="text/javascript"></script> 
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
 
@@ -49,7 +50,7 @@
 			<!-- Main -->
 			<article id="main">
 				<header class="style8">
-					<h2>Helix Suite<span class="x">&times;</span>Perforce</h2>
+					<h2>Helix Sync<span class="x">&times;</span>Perforce</h2>
 <!-- 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 -->					</header>
 <section class="wrapper style5">
@@ -80,27 +81,33 @@
 					</b>
 				</ol>	
 				We had a total of 10 total test participants. 
-				4 of them we're internal Perforce customers. 6 of them wer're external participants.
-			</br>
+				4 of them were internal Perforce customers. 6 of them were external participants.
+				<br/>
 
-		</p>
+			</p>
 
-		<ul class="actions vertical">
-			<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
-		</ul>
+			<blockquote><span class="big">Design artifacts below <i class="fa fa-long-arrow-down"></i></span></blockquote>
 
+			<ul class="actions vertical">
+				<li><a href="https://erchsm.github.io/helix-sync" class="button ">Concept Prototype</a></li>
+				<li><a href="https://github.com/erchsm/helix-sync/raw/gh-pages/test-script.pdf" class="button ">Test Script</a></li>
+			</ul>
+
+		</div>
+		<div class="7u 12u$(medium)">
+			<!-- <blockquote>a preview of our prototype!</blockquote> -->
+			<span class="image fit"><img src="images/bg1.png" alt=""/></span>
+
+			<h4>OUR SYNTHESIS</h4>
+			<p>To help evangelize design through Perforce myself and another designer fascilitated group synthesis sessions where we invited engineers & stakeholders to participate in "hands-on" synthesis</p>
+			<p>Group synthesis activities we conducted in these sessions included a <a href="https://en.wikipedia.org/wiki/Affinity_diagram">Affinity Mapping</a> of key insights/quotes from the test. Myself and another designer worked on turning those groupings into "User Needs..." statements.</p>
+			<span class="image fit"><img src="images/user-needs.png" alt=""/></span>
+			<p>By creating sets of these "User needs..." statements we were able to create actionable design recommendations from them. We decided to call these "Design Principles" as opposed to "Design Recommendations" because this product had yet to be grounded in user research–we chose to create a solid design foundation for further research to build on.</p>
+			<span class="image fit "><img src="images/synthesis.png" alt=""/></span>
+			<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
+		</div>
 	</div>
-	<div class="7u 12u$(medium)">
-		<span class="image fit"><img src="images/bg1.png" alt=""/></span>
-
-		<h4>OUR SYNTHESIS</h4>
-		<p>To help evangelize design through Perforce myself and another designer fascilitated group synthesis sessions where we invited engineers & stakeholders to participate in "hands-on" synthesis</p>
-		<p>Techniques we used during these sessions included Affinity Mapping</p>
-		<span class="image fit"><img src="images/synthesis.png" alt=""/></span>
-		<!-- <span class="image fit"><img src="images/HELIX WITH SOME TEXT.png" alt=""/></span> -->
-	</div>
-</div>
-<div class="row">
+<!-- <div class="row">
 	<div class="6u 12u$(medium)">
 		<h4>Helix Cloud</h4>
 		<p>Some icon design I did for their Helix Cloud product. Made with Illustrator. Enjoy!</p>
@@ -119,7 +126,7 @@
 		<span class="image fit"><img src="images/HELIX  INVERSE.png" alt=""/></span>
 		<span class="image fit"><img src="images/HELIX .png" alt=""/></span>
 	</div>
-</div>
+</div> -->
 
 </div>
 </section>
