--- a/perforce/index.html
+++ b/perforce/index.html
@@ -99,7 +99,7 @@
 			<span class="image fit"><img src="images/bg1.png" alt=""/></span>
 
 			<h4>OUR SYNTHESIS</h4>
-			<p>To help evangelize design through Perforce myself and another designer fascilitated group synthesis sessions where we invited engineers & stakeholders to participate in "hands-on" synthesis</p>
+			<p>To help evangelize design through Perforce myself and another designer fascilitated group synthesis sessions where we invited engineers & stakeholders to participate in "hands-on" synthesis.</p>
 			<p>Group synthesis activities we conducted in these sessions included a <a href="https://en.wikipedia.org/wiki/Affinity_diagram">Affinity Mapping</a> of key insights/quotes from the test. Myself and another designer worked on turning those groupings into "User Needs..." statements.</p>
 			<span class="image fit"><img src="images/user-needs.png" alt=""/></span>
 			<p>By creating sets of these "User needs..." statements we were able to create actionable design recommendations from them. We decided to call these "Design Principles" as opposed to "Design Recommendations" because this product had yet to be grounded in user research–we chose to create a solid design foundation for further research to build on.</p>
